--- a/main.ipynb
+++ b/main.ipynb
@@ -23,7 +23,7 @@
           "height": 313
         },
         "id": "dWvexHVRBFpD",
-        "outputId": "d80c6d71-ce64-427d-dabe-3ce1ed765870"
+        "outputId": "f42df923-e4d7-4647-a399-7f27da6974e4"
       },
       "outputs": [
         {
@@ -88,7 +88,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-44fb3f0e-c0c5-41a4-8165-361947fe25a7\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-29db3e43-4f23-418a-b028-8cb633111f48\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -323,7 +323,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-44fb3f0e-c0c5-41a4-8165-361947fe25a7')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-29db3e43-4f23-418a-b028-8cb633111f48')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -375,12 +375,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-44fb3f0e-c0c5-41a4-8165-361947fe25a7 button.colab-df-convert');\n",
+              "        document.querySelector('#df-29db3e43-4f23-418a-b028-8cb633111f48 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-44fb3f0e-c0c5-41a4-8165-361947fe25a7');\n",
+              "        const element = document.querySelector('#df-29db3e43-4f23-418a-b028-8cb633111f48');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -400,8 +400,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-d597ea94-ec42-4574-8ddc-923763f91f94\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d597ea94-ec42-4574-8ddc-923763f91f94')\"\n",
+              "<div id=\"df-abbf0678-e1f5-4fbe-ab69-fdee38a4695b\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-abbf0678-e1f5-4fbe-ab69-fdee38a4695b')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -520,7 +520,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-d597ea94-ec42-4574-8ddc-923763f91f94 button');\n",
+              "        document.querySelector('#df-abbf0678-e1f5-4fbe-ab69-fdee38a4695b button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -531,7 +531,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 54
+          "execution_count": 70
         }
       ],
       "source": [
@@ -554,7 +554,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j7CpyWZ6GuTQ",
-        "outputId": "cf78d9d2-7e40-47d3-df7d-1633030a8e93"
+        "outputId": "a2b840d9-cf23-46be-9494-b1ab79d9778e"
       },
       "execution_count": null,
       "outputs": [
@@ -566,7 +566,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 71
         }
       ]
     },
@@ -576,57 +576,10 @@
         "df.nunique()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PN2VpXlCLDWa",
-        "outputId": "587bb95c-d97a-408c-bf1f-bc3375457254"
+        "id": "PN2VpXlCLDWa"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "hotel                                2\n",
-              "is_canceled                          2\n",
-              "lead_time                          479\n",
-              "arrival_date_year                    3\n",
-              "arrival_date_month                  12\n",
-              "arrival_date_week_number            53\n",
-              "arrival_date_day_of_month           31\n",
-              "stays_in_weekend_nights             17\n",
-              "stays_in_week_nights                35\n",
-              "adults                              14\n",
-              "children                             5\n",
-              "babies                               5\n",
-              "meal                                 5\n",
-              "country                            177\n",
-              "market_segment                       8\n",
-              "distribution_channel                 5\n",
-              "is_repeated_guest                    2\n",
-              "previous_cancellations              15\n",
-              "previous_bookings_not_canceled      73\n",
-              "reserved_room_type                  10\n",
-              "assigned_room_type                  12\n",
-              "booking_changes                     21\n",
-              "deposit_type                         3\n",
-              "agent                              333\n",
-              "company                            352\n",
-              "days_in_waiting_list               128\n",
-              "customer_type                        4\n",
-              "adr                               8879\n",
-              "required_car_parking_spaces          5\n",
-              "total_of_special_requests            6\n",
-              "reservation_status                   3\n",
-              "reservation_status_date            926\n",
-              "dtype: int64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1852,7 +1805,7 @@
       "source": [
         "accuracy= []\n",
         "roc_auc= []\n",
-        "f1 = np.array([])\n",
+        "f1 = np.array()\n",
         "model_names =[]"
       ],
       "metadata": {
